--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,11 @@
-# Prerequisites
-*.d
+# Compilados
+/build/
+/*.o
+/*.exe
 
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
+# Archivos de configuración del IDE
+.vscode/
+.idea/
 
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
+# Otros
+*.log
